2011-09-15  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix Portfile dependencies.

	* distrib/macports/Portfile.in: Set fop as run dependency.
	(depends_lib): Use GraphicsMagick instead of ImageMagick.

2011-09-12  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix Portfile related dependencies.

	* Makefile.am: Improve Portfile dependencies.

	* distrib/macports/Portfile.in: Add package dependencies.

2011-09-09  Guillaume Lazzara  <z@lrde.epita.fr>

	Generate a valid Portfile for MacPorts support.

	* Makefile.am: Add a rule to create a valid Portfile.

	* distrib/macports/Portfile.in: New.

2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* lrde-scmstats.sh: Do not change permissions.

2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* lrde-scmstats.sh: New.

2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* AUTHORS: Update.

2011-09-02  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Remove references to deprecated Makefiles.

2011-09-02  Guillaume Lazzara  <z@lrde.epita.fr>

	* build-aux/texi2dvi: Fix a regular expression.

2011-09-02  Guillaume Lazzara  <z@lrde.epita.fr>

	* NEWS: List changes for the next release.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Configure scribo/src/util.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Configure ICDAR contests directories.

2011-05-05  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	* configure.ac: Configure scribo/tests/util.

2011-04-05  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Configure scribo/tests/estim.

2011-04-05  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Configure scribo/tests/primitive/extract.

2011-02-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* build-aux/build_unit_test.sh: Define HAVE_* for unit-tests.

2011-02-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Configure scribo/src/primitive/remove.

2011-02-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Configure scribo/tests/convert.
