@@ -39,4 +39,9 @@ variant swilena description {Add Python bindings} {
     configure.args-append --enable-swilena
 }
 
+# Temporary workaround because of a Apple's GCC bug.
+platform darwin 11 {
+    configure.env-append CXXFLAGS=-fno-strict-aliasing
+}
+
 default_variants    +scribo
